--- a/bootstrap_styles.css
+++ b/bootstrap_styles.css
@@ -10096,7 +10096,7 @@ hr.light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("http://dronorder.doc12.org/wp-content/themes/twentytwenty/assets/img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("https://dronorder.net/wp-content/uploads/2020/06/action-air-aircraft-aviation-442587-scaled.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
