--- a/own_styles.css
+++ b/own_styles.css
@@ -1,7 +1,12 @@
-
+.entry-header{
+    background-color:#f4623a !important;
+}
+#site-footer{
+    background-color:#f4623a !important;
+}
 
 .feedback-button {
-    box-shadow: 0 6px 6px rgba(0,0,0,0.25) !important;
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.25) !important;
     position: fixed;
     border: 1px solid var(--input-border-color);
     bottom: 0;
@@ -21,52 +26,103 @@
     background: #fff;
     color: var(--input-text-color);
     background: var(--input-background-color);
-  }
-  
-  
-  .button-wrap {
-      /* height: 100%; */
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding:10px;
-  }
-  
-  .smart-button {
-      color: white;
-      background-color:black !important; 
-      letter-spacing: 2.5px;
-      border: none;
-      border-radius: 45px;
-      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-      transition: all 0.3s ease 0s;
-      cursor: pointer;
-      width:350px;
-      margin:20px;
-  }
-  
-  .smart-button:hover {
-      box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-      transform: translateY(-7px);
-  }
-  
-  .own-h3{
-    font-size:30px;
-    font-weight:600;
-    color:black;
-    width:50%;
-  } 
-  
-
-
-
-
-.input-form{
-    color:black;
-    border-radius:10px !important;
-    height:50px;
 }
 
-.input-group{
-    margin:20px;
+
+.button-wrap {
+    /* height: 100%; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+.smart-button {
+    color: white;
+    background-color: black !important;
+    letter-spacing: 2.5px;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    width: 350px;
+    margin: 20px;
+}
+
+.smart-button:hover {
+    box-shadow: 0 15px 20px rgba(46, 229, 157, 0.4);
+    transform: translateY(-7px);
+}
+
+.own-h3 {
+    font-size: 30px;
+    font-weight: 600;
+    color: black;
+    width: 50%;
+}
+
+
+.input-form {
+    color: black;
+    border-radius: 10px !important;
+    height: 50px;
+}
+
+.input-group {
+    max-width:80%;
+
+    margin: auto;
+}
+
+.frontpage-logo{
+    margin:30px;
+}
+
+.frontpage-title {
+    -webkit-font-smoothing: antialiased;
+    word-wrap: break-word;
+    hyphens: manual;
+    text-align: center;
+    border: 0;
+    outline: 0;
+    font: inherit;
+    vertical-align: baseline;
+    font-style: inherit;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    line-height: 1;
+    color: #ddd;
+    font-family: roboto, Sans-serif;
+    font-size: 80px;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.frontpage-subtitle {
+    --font-family-sans-serif: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-family: "Merriweather", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    line-height: 1.5;
+    text-align: center !important;
+    box-sizing: border-box;
+    margin-top: 0;
+    margin-bottom: 3rem !important;
+    font-weight: 300 !important;
+    color: rgba(255, 255, 255, 0.75);
+    font-size: 40px;
+}
+
+.letsgo-button{
+    width: 350px;
+}
+
+.flight-map{
+    width: 100%; 
+    height: 500px;
+    margin:auto;
+    margin-top:35px;
+
 }
