--- a/own_styles.css
+++ b/own_styles.css
@@ -1,8 +1,8 @@
-.entry-header{
-    background-color:#f4623a !important;
+.entry-header {
+    background-color: #f4623a !important;
 }
-#site-footer{
-    background-color:#f4623a !important;
+#site-footer {
+    background-color: #f4623a !important;
 }
 
 .feedback-button {
@@ -39,7 +39,6 @@
 
 .smart-button {
     color: white;
-    background-color: black !important;
     letter-spacing: 2.5px;
     border: none;
     border-radius: 45px;
@@ -48,6 +47,16 @@
     cursor: pointer;
     width: 350px;
     margin: 20px;
+    font-size: 20px;
+}
+
+.smart-button[value="request_delivery_button"] {
+    background-color: black;
+}
+
+
+.smart-button[value="subscription-button"] {
+    background-color: #f4623a;
 }
 
 .smart-button:hover {
@@ -70,13 +79,13 @@
 }
 
 .input-group {
-    max-width:80%;
+    max-width: 80%;
 
     margin: auto;
 }
 
-.frontpage-logo{
-    margin:30px;
+.frontpage-logo {
+    margin: 30px;
 }
 
 .frontpage-title {
@@ -115,14 +124,54 @@
     font-size: 40px;
 }
 
-.letsgo-button{
+.letsgo-button {
     width: 350px;
+    color: white;
+    background-color: #f4623a;
+    letter-spacing: 2.5px;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    width: 350px;
+    margin: 20px;
 }
 
-.flight-map{
-    width: 100%; 
-    height: 500px;
-    margin:auto;
-    margin-top:35px;
+.letsgo-button:hover {
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.4);
+    transform: translateY(-7px);
+}
 
+.flight-map {
+    width: 100%;
+    height: 500px;
+    margin: 35px auto auto;
+
+}
+
+
+/* ----------------------
+	TYPOGRAPHY 
+	---------------------- */
+body {
+    font-size: 20px;
+}
+h1 {
+    font-size: 2em;
+}
+h2 {
+    font-size: 2em;
+}
+h3 {
+    font-size: 1.4em;
+}
+h4 {
+    font-size: 1.5em;
+}
+h5 {
+    font-size: 1.3em;
+}
+h6 {
+    font-size: 1.1em;
 }
