--- a/own_styles.css
+++ b/own_styles.css
@@ -179,3 +179,21 @@ h5 {
 h6 {
     font-size: 1.1em;
 }
+
+
+.h2-highlighting-button
+{
+	background-color:#F4623A;
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
+	padding:15px;
+	text-align:center;
+	border-radius:25px;
+}
+
+.h2-highlighting-button:hover
+{
+	background-color:#d6370c;
+	color:white;
+	transform: translateY(-7px);
+}
