--- a/own_styles.css
+++ b/own_styles.css
@@ -70,7 +70,7 @@
 .own-h3 {
     font-size: 30px;
     font-weight: 600;
-    color: white;
+    color: black;
     width: 50%;
     margin-bottom:20px;
 }
@@ -151,7 +151,6 @@
     width: 100%;
     height: 500px;
     margin: 35px auto auto;
-
 }
 
 
