--- a/own_styles.css
+++ b/own_styles.css
@@ -71,7 +71,7 @@
     font-size: 30px;
     font-weight: 600;
     color: black;
-    width: 50%;
+    width: 75%;
     margin-bottom:20px;
 }
 
@@ -80,6 +80,7 @@
     color: black;
     border-radius: 10px !important;
     height: 50px;
+    margin-top:40px !important; 
 }
 
 .input-group {
@@ -151,6 +152,7 @@
     width: 100%;
     height: 500px;
     margin: 35px auto auto;
+    color:black;
 }
 
 
