--- a/own_styles.css
+++ b/own_styles.css
@@ -196,4 +196,50 @@ h6 {
 	background-color:#d6370c;
 	color:white;
 	transform: translateY(-7px);
+} 
+
+.landing-page{
+	margin-top: 150px;
+	padding:15px;
+}
+
+.landing-page:before{
+	content: ""; 
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+	background: url("https://dronorder.net/wp-content/uploads/2020/06/action-air-aircraft-aviation-442587-scaled.jpg") center center;
+	opacity:.65;
+}
+
+/* Skip Link --------------------------------- */
+.skip-lp {
+	text-decoration-line:none;
+	padding:70px;
+	font-size:18px;
+	z-index: 999999999;
+	position: absolute;
+	right:0px;
+	bottom:0px;
+}
+
+.skip-lp:hover {
+	font-size: 35px;
+	font-weight: 600;
+	line-height: normal;
+	z-index: 100000;
+}
+ 
+.zoom-1{ 
+	transition: transform .4s;
+}
+
+.zoom-1:hover {
+	z-index:100;
+	-ms-transform: scale(1.15); /* IE 9 */
+	-webkit-transform: scale(1.15); /* Safari 3-8 */
+	transform: scale(1.15); 
 }
