--- a/own_styles.css
+++ b/own_styles.css
@@ -45,8 +45,10 @@
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
     cursor: pointer;
-    width: 350px;
+    width: 60%;
     margin: 20px;
+    max-width:250px;
+    min-width:100px;
     font-size: 20px;
     padding: 10px;
 }
@@ -73,11 +75,17 @@
 }
 
 
+.own-input-group{
+    width:50%;
+}
+
 .input-form {
     color: black;
     border-radius: 10px !important;
     height: 50px;
     margin-top:40px !important; 
+    padding: 1.5rem 1.8rem;
+    font-size:1.6rem;
 }
 
 .input-group {
