--- a/own_styles.css
+++ b/own_styles.css
@@ -47,8 +47,8 @@
     cursor: pointer;
     width: 60%;
     margin: 20px;
-    max-width:250px;
-    min-width:100px;
+    max-width:350px;
+    min-width:75px;
     font-size: 20px;
     padding: 10px;
 }
@@ -70,7 +70,7 @@
     font-size: 30px;
     font-weight: 600;
     color: black;
-    width: 75%;
+    width: 100%;
     margin-bottom:20px;
 }
 
@@ -80,6 +80,7 @@
 }
 
 .input-form {
+    background:white;
     color: black;
     border-radius: 10px !important;
     height: 50px;
@@ -205,7 +206,7 @@ h6 {
 /* Skip Link --------------------------------- */
 .skip-lp {
 	text-decoration-line:none;
-	padding:70px;
+	padding:2.5rem;
 	font-size:18px;
 	z-index: 999999999;
 	position: absolute;
