--- a/own_styles.css
+++ b/own_styles.css
@@ -45,12 +45,13 @@
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
     cursor: pointer;
-    width: 60%;
     margin: 20px;
-    max-width:350px;
-    min-width:75px;
     font-size: 20px;
     padding: 10px;
+
+    min-width:75px;
+    width: 60%;
+    max-width:350px;
 }
 
 .smart-button[value="black"]{
@@ -67,17 +68,13 @@
 
 
 .own-h3 {
-    font-size: 30px;
+    font-size: 30px; 
     font-weight: 600;
     color: black;
     width: 100%;
     margin-bottom:20px;
 }
 
-
-.own-input-group{
-    width:50%;
-}
 
 .input-form {
     background:white;
@@ -87,11 +84,13 @@
     margin-top:40px !important; 
     padding: 1.5rem 1.8rem;
     font-size:1.6rem;
+
+    min-width:150px;
+    width: 60%;
 }
 
 .input-group {
     max-width: 80%;
-
     margin: auto;
 }
 
@@ -148,6 +147,7 @@
 	---------------------- */
 body {
     font-size: 20px;
+    position:absolute;
 }
 h1 {
     font-size: 2em;
@@ -206,7 +206,7 @@ h6 {
 /* Skip Link --------------------------------- */
 .skip-lp {
 	text-decoration-line:none;
-	padding:2.5rem;
+	padding:3.5rem;
 	font-size:18px;
 	z-index: 999999999;
 	position: absolute;
