--- a/own_styles.css
+++ b/own_styles.css
@@ -66,6 +66,13 @@
     background-color: black;
 }
 
+.smart-button[value="demoButton"]{ 
+    border-color: black;
+    border:solid 2px;
+    background-color: white;
+    color: black;
+    border-radius:0px;
+}
 
 .own-h3 {
     font-size: 30px; 
@@ -114,7 +121,7 @@
     line-height: 1;
     color: #ddd;
     font-family: roboto, Sans-serif;
-    font-size: 80px;
+    font-size: 7vw;
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -131,7 +138,7 @@
     margin-bottom: 3rem !important;
     font-weight: 300 !important;
     color: rgba(255, 255, 255, 0.75);
-    font-size: 40px;
+    font-size: 4vw;
 }
 
 
@@ -206,20 +213,12 @@ h6 {
 /* Skip Link --------------------------------- */
 .skip-lp {
 	text-decoration-line:none;
-	padding:3.5rem;
-	font-size:18px;
-	z-index: 999999999;
-	position: absolute;
-	right:0px;
-	bottom:0px;
+	padding:2rem;
+	font-size:25px; 
+	background-color:black;
+    color:white;
 }
-
-.skip-lp:hover {
-	font-size: 35px;
-	font-weight: 600;
-	line-height: normal;
-	z-index: 100000;
-}
+ 
  
 .zoom-1{ 
 	transition: transform .4s;
